--- a/server/droneserver-service.yaml
+++ b/server/droneserver-service.yaml
@@ -5,7 +5,7 @@ metadata:
   labels:
     app: drone-server
 spec:
-  type: ClusterIP
+  type: LoadBalancer
   selector:
     app: drone-server
   ports:
