--- a/server/droneserver-secret.yaml
+++ b/server/droneserver-secret.yaml
@@ -4,9 +4,9 @@ metadata:
   name: drone-server-secret
 type: Opaque
 data:
-  DRONE_GITHUB_CLIENT_ID: xxxxxxx     #Get this from GitHub OAUTH
-  DRONE_GITHUB_CLIENT_SECRET: xxxxxxx #Get this from GitHub OAUTH
-  DRONE_RPC_SECRET: xxxxxxx           #openssl rand -hex 16
-  DRONE_DATABASE_DATASOURCE: xxxxxxx  #postgres://postgresadmin:admin123@postgres:5432/postgresdb?sslmode=disable
-  DRONE_USER_CREATE: xxxxxxx          #username:marcel-dempers,admin:true
-  DRONE_SERVER_HOST: xxxxxxx          #drone.marceldempers.dev
+  DRONE_GITHUB_CLIENT_ID: 0b47591a2b9efdf578a6 #Get this from GitHub OAUTH
+  DRONE_GITHUB_CLIENT_SECRET: 523b3b67fa2558c20c569291de89348433cfb5cc #Get this from GitHub OAUTH
+  DRONE_RPC_SECRET: ab8bd886abf83115897235b95f35cb3a #openssl rand -hex 16
+  DRONE_DATABASE_DATASOURCE: postgres://postgresadmin:admin123@postgres:5432/postgresdb?sslmode=disable
+  DRONE_USER_CREATE: dXNlcm5hbWU6U3VsZWtoYTAyMTEyMDAxLGFkbWluOnRydWU=
+  DRONE_SERVER_HOST: ae15ba55569fb4f13a601d22196495c7-925682162.ap-south-1.elb.amazonaws.com #drone.marceldempers.dev
