--- a/server/droneserver-ingress.yaml
+++ b/server/droneserver-ingress.yaml
@@ -9,7 +9,7 @@ metadata:
     traefik.ingress.kubernetes.io/redirect-permanent: "true"
 spec:
   rules:
-    - host: 13.234.195.244
+    - host: ec2-13-235-135-252.ap-south-1.compute.amazonaws.com
       http:
         paths:
           - backend:
