--- a/runner/dronerunner.yaml
+++ b/runner/dronerunner.yaml
@@ -26,7 +26,7 @@ spec:
             - name: DRONE_SERVICE_ACCOUNT_DEFAULT
               value: drone-runner
             - name: DRONE_RPC_HOST
-              value: droneserver.drone
+              value: 13.235.135.252
             - name: DRONE_RPC_PROTO
               value: http
             - name: DRONE_RPC_SECRET
